Revision history for Pod-Readme

v1.0.1_01
  [Bug Fixes]
  - Fixed argument name for include command.

  - Changed tests to compare files with handle different Windows line
    endings.

  [Documentation]
  - Fixed POD errors.

  [Enhancements]
  - Use types with stricter constraints.

  [Other Changes]
  - Minor internal code tweaks.

v1.0.0_03 2014-09-24 21:14 BST
  [Bug Fixes]
  - The tests for the requires plugin handle non-author builds.

  - Fix for tests on some systems.

  [Enhancements]
  - Show path of missing META.yml file in requires plugin.

  [Documentation]
  - Consistent names in POD.

  - Fixed typos in Changes file.

  [Other Changes]
  - Added hooks for author tests in Makefile.PL.

  - Fixed license metadata error to make CPANTS happy, and to be
    consistent with license in the POD.

  - Tests use Exporter instead of Exporter::Lite.

  - Tests use Test::Kit rather than Test::Most, and explicitly import
    the tests modules that they use.

  - Removed redundant prereqs from Makefile.PL.

v1.0.0_02 2014-09-24 14:14 BST
  [Bug Fixes]
  - Fixed minimum version of some prerequisites for tests.

  [Enhancements]
  - Added parse_from_file and parse_from_filehandle methods for
    backwards compatability.

  [Other Changes]
  - Added more tests.

  - The bugtracker URL now refers to the GitHub issues list at
    https://github.com/bigpresh/Pod-Readme/issues
    instead of RT.

  - Added a version to all modules in the distribution, and a version
    QA test to the repo.

  [Documentation]
  - Added missing date to Changes.

  - Fixed typos in POD and README.

  - Added stub POD to Pod::Readme::Filter.

  - Fixed a daft typo in the Changes file.

  - Documented known issue in the requires plugin.

  - The README is now a POD document.

v1.0.0_01 2014-09-23 13:58 BST
  [Incompatabilities]
  - Major rewrite, using modern Perl v5.10.1.

  - This module is no longer a subclass of a POD parsing
    module. Instead, it is a simple POD filter.
