@@ -3,12 +3,12 @@ package Pod::Readme::Plugin::changes;
 use Moose::Role;
 
 use CPAN::Changes 0.30;
-use MooseX::Types::Path::Class;
 use Path::Class;
+use Types::Standard qw/ Bool Str /;
 
 use version 0.77; our $VERSION = version->declare('v1.0.1_01');
 
-use Pod::Readme::Types qw/ HeadingLevel /;
+use Pod::Readme::Types qw/ File HeadingLevel /;
 
 =head1 NAME
 
@@ -65,20 +65,20 @@ requires 'parse_cmd_args';
 
 has 'changes_file' => (
     is      => 'rw',
-    isa     => 'Path::Class::File',
+    isa     => File,
     coerce  => 1,
     default => 'Changes',
 );
 
 has 'changes_title' => (
     is      => 'rw',
-    isa     => 'Str',
+    isa     => Str,
     default => 'RECENT CHANGES',
 );
 
 has 'changes_verbatim' => (
     is      => 'rw',
-    isa     => 'Bool',
+    isa     => Bool,
     default => 0,
 );
 
@@ -90,7 +90,7 @@ has 'changes_heading_level' => (
 
 has 'changes_run' => (
     is      => 'rw',
-    isa     => 'Bool',
+    isa     => Bool,
     default => 0,
 );
 
