@@ -5,10 +5,11 @@ use Moose::Role;
 use CPAN::Meta;
 use Module::CoreList;
 use Path::Class;
+use Types::Standard qw/ Bool Str /;
 
 use version 0.77; our $VERSION = version->declare('v1.0.1_01');
 
-use Pod::Readme::Types qw/ HeadingLevel /;
+use Pod::Readme::Types qw/ File HeadingLevel /;
 
 =head1 NAME
 
@@ -71,20 +72,20 @@ requires 'parse_cmd_args';
 
 has 'requires_from_file' => (
     is      => 'rw',
-    isa     => 'Path::Class::File',
+    isa     => File,
     coerce  => 1,
     default => 'META.yml',
 );
 
 has 'requires_title' => (
     is      => 'rw',
-    isa     => 'Str',
+    isa     => Str,
     default => 'REQUIREMENTS',
 );
 
 has 'requires_omit_core' => (
     is      => 'rw',
-    isa     => 'Bool',
+    isa     => Bool,
     default => 1,
 );
 
@@ -96,7 +97,7 @@ has 'requires_heading_level' => (
 
 has 'requires_run' => (
     is      => 'rw',
-    isa     => 'Bool',
+    isa     => Bool,
     default => 0,
 );
 
